fix: 💄 social links order and spacing
before: big gap tw - fb; order: tw, fb
after: smaller gap, lang selector separate; order: fb, tw

--- a/src/components/Header/Navigation/Navigation.module.css
+++ b/src/components/Header/Navigation/Navigation.module.css
@@ -73,6 +73,7 @@
   }
   .Navigation .navLinks.last {
     flex-direction: row;
+    gap: 0.25em;
     margin-bottom: unset;
   }
 }
